sys/prebuilt-bindings/geos_3.13.rs

pub const GEOSMakeValidMethods_GEOS_MAKE_VALID_LINEWORK: GEOSMakeValidMethods = 0;
pub const GEOSMakeValidMethods_GEOS_MAKE_VALID_STRUCTURE: GEOSMakeValidMethods = 1;
pub type GEOSMakeValidMethods = libc::c_uint;
extern "C" {
    pub fn GEOSMakeValidParams_create_r(extHandle: GEOSContextHandle_t)
        -> *mut GEOSMakeValidParams;
}
extern "C" {
    pub fn GEOSMakeValidParams_destroy_r(
        handle: GEOSContextHandle_t,
        parms: *mut GEOSMakeValidParams,
    );
}
extern "C" {
    pub fn GEOSMakeValidParams_setKeepCollapsed_r(
        handle: GEOSContextHandle_t,
        p: *mut GEOSMakeValidParams,
        style: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSMakeValidParams_setMethod_r(
        handle: GEOSContextHandle_t,
        p: *mut GEOSMakeValidParams,
        method: GEOSMakeValidMethods,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSMakeValid_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSMakeValidWithParams_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        makeValidParams: *const GEOSMakeValidParams,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSRemoveRepeatedPoints_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        tolerance: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeomType_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry)
        -> *mut libc::c_char;
}
extern "C" {
    pub fn GEOSGeomTypeId_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGetSRID_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSSetSRID_r(handle: GEOSContextHandle_t, g: *mut GEOSGeometry, SRID: libc::c_int);
}
extern "C" {
    pub fn GEOSGeom_getUserData_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn GEOSGeom_setUserData_r(
        handle: GEOSContextHandle_t,
        g: *mut GEOSGeometry,
        userData: *mut libc::c_void,
    );
}
extern "C" {
    pub fn GEOSGetNumGeometries_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGetGeometryN_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        n: libc::c_int,
    ) -> *const GEOSGeometry;
}
extern "C" {
    pub fn GEOSNormalize_r(handle: GEOSContextHandle_t, g: *mut GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSOrientPolygons_r(
        handle: GEOSContextHandle_t,
        g: *mut GEOSGeometry,
        exteriorCW: libc::c_int,
    ) -> libc::c_int;
}
pub const GEOSPrecisionRules_GEOS_PREC_VALID_OUTPUT: GEOSPrecisionRules = 0;
pub const GEOSPrecisionRules_GEOS_PREC_NO_TOPO: GEOSPrecisionRules = 1;
pub const GEOSPrecisionRules_GEOS_PREC_KEEP_COLLAPSED: GEOSPrecisionRules = 2;
pub type GEOSPrecisionRules = libc::c_uint;
extern "C" {
    pub fn GEOSGeom_setPrecision_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        gridSize: libc::c_double,
        flags: libc::c_int,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_getPrecision_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> libc::c_double;
}
extern "C" {
    pub fn GEOSGetNumInteriorRings_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetNumPoints_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetX_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        x: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetY_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        y: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetZ_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        z: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetM_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        m: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGetInteriorRingN_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        n: libc::c_int,
    ) -> *const GEOSGeometry;
}
extern "C" {
    pub fn GEOSGetExteriorRing_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *const GEOSGeometry;
}
extern "C" {
    pub fn GEOSGetNumCoordinates_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getCoordSeq_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *const GEOSCoordSequence;
}
extern "C" {
    pub fn GEOSGeom_getDimensions_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getCoordinateDimension_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getXMin_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        value: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getYMin_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        value: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getXMax_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        value: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getYMax_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        value: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getExtent_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        xmin: *mut libc::c_double,
        ymin: *mut libc::c_double,
        xmax: *mut libc::c_double,
        ymax: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetPointN_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        n: libc::c_int,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeomGetStartPoint_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeomGetEndPoint_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSArea_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        area: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSLength_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        length: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSDistance_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSDistanceWithin_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: libc::c_double,
    ) -> libc::c_char;
}
extern "C" {
    pub fn GEOSDistanceIndexed_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSHausdorffDistance_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSHausdorffDistanceDensify_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        densifyFrac: libc::c_double,
        dist: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSFrechetDistance_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSFrechetDistanceDensify_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        densifyFrac: libc::c_double,
        dist: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSHilbertCode_r(
        handle: GEOSContextHandle_t,
        geom: *const GEOSGeometry,
        extent: *const GEOSGeometry,
        level: libc::c_uint,
        code: *mut libc::c_uint,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetLength_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        length: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSNearestPoints_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut GEOSCoordSequence;
}
extern "C" {
    pub fn GEOSGeom_transformXY_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        callback: GEOSTransformXYCallback,
        userdata: *mut libc::c_void,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSOrientationIndex_r(
        handle: GEOSContextHandle_t,
        Ax: libc::c_double,
        Ay: libc::c_double,
        Bx: libc::c_double,
        By: libc::c_double,
        Px: libc::c_double,
        Py: libc::c_double,
    ) -> libc::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSWKTReader_t {
    _unused: [u8; 0],
}
pub type GEOSWKTReader = GEOSWKTReader_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSWKTWriter_t {
    _unused: [u8; 0],
}
pub type GEOSWKTWriter = GEOSWKTWriter_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSWKBReader_t {
    _unused: [u8; 0],
}
pub type GEOSWKBReader = GEOSWKBReader_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSWKBWriter_t {
    _unused: [u8; 0],
}
pub type GEOSWKBWriter = GEOSWKBWriter_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSGeoJSONReader_t {
    _unused: [u8; 0],
}
pub type GEOSGeoJSONReader = GEOSGeoJSONReader_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSGeoJSONWriter_t {
    _unused: [u8; 0],
}
pub type GEOSGeoJSONWriter = GEOSGeoJSONWriter_t;
extern "C" {
    pub fn GEOSWKTReader_create_r(handle: GEOSContextHandle_t) -> *mut GEOSWKTReader;
}
extern "C" {
    pub fn GEOSWKTReader_destroy_r(handle: GEOSContextHandle_t, reader: *mut GEOSWKTReader);
}
extern "C" {
    pub fn GEOSWKTReader_read_r(
        handle: GEOSContextHandle_t,
        reader: *mut GEOSWKTReader,
        wkt: *const libc::c_char,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSWKTReader_setFixStructure_r(
        handle: GEOSContextHandle_t,
        reader: *mut GEOSWKTReader,
        doFix: libc::c_char,
    );
}
extern "C" {
    pub fn GEOSWKTWriter_create_r(handle: GEOSContextHandle_t) -> *mut GEOSWKTWriter;
}
extern "C" {
    pub fn GEOSWKTWriter_destroy_r(handle: GEOSContextHandle_t, writer: *mut GEOSWKTWriter);
}
extern "C" {
    pub fn GEOSWKTWriter_write_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
        g: *const GEOSGeometry,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn GEOSWKTWriter_setTrim_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
        trim: libc::c_char,
    );
}
extern "C" {
    pub fn GEOSWKTWriter_setRoundingPrecision_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
        precision: libc::c_int,
    );
}
extern "C" {
    pub fn GEOSWKTWriter_setOutputDimension_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
        dim: libc::c_int,
    );
}
